Make ::backdrop inherit from parent element https://bugs.webkit.org/show_bug.cgi?id=263834

Reviewed by Tim Nguyen.

StyleTreeResolver/RenterTreeUpdate explicitly checked for ::backdrop
elements to remove their inheritance chain, per the spec at the time.
https://github.com/whatwg/fullscreen/issues/124 was created to query
this and it was resolved that ::backdrop _should_ inherit.

This commit addresses the change by removing the check in
StyleTreeResolve to allow ::backdrop to inherit from its parent element,
and altering the check in RenderTreeUpdate to call renderer.style()
instead of renderer.view.style(). This aligns behaviour with the other
browsers and WPT.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/dialog-backdrop-create.html:
* Source/WebCore/rendering/updating/RenderTreeUpdaterGeneratedContent.cpp:
(WebCore::RenderTreeUpdater::GeneratedContent::updateBackdropRenderer):
* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::makeResolutionContextForPseudoElement):

Canonical link: https://commits.webkit.org/270246@main